# agent-bridge

./: .containerignore  .gitignore  CLAUDE.md  Containerfile  Makefile  README.md  agent_config.py  entrypoint.sh  server.py
.claude/agents/: issue-fixer.md
.claude/hooks/: session-start.sh
.claude/skills/create-agent/: SKILL.md
.github/workflows/: cd.yml
agent_bridge/: pyproject.toml
agent_bridge/src/agent_bridge/: __init__.py
agent_bridge/src/agent_bridge/application/: build_agent_card.py  execute_task.py
agent_bridge/src/agent_bridge/domain/: exceptions.py  model.py  ports.py
agent_bridge/src/agent_bridge/infrastructure/: claude_executor.py  config_loader.py  prompt_installer.py
agent_bridge/src/agent_bridge/presentation/: a2a.py  cli.py  mcp_server.py  server.py
agent_bridge/tests/: conftest.py
agent_bridge/tests/application/: test_build_agent_card.py  test_execute_task.py
agent_bridge/tests/domain/: test_model.py
agent_bridge/tests/infrastructure/: test_claude_executor.py  test_config_loader.py  test_prompt_installer.py
agent_bridge/tests/presentation/: test_a2a.py  test_cli.py  test_server.py
src/agent_runner/: __main__.py  config.py  server.py
src/agent_runner/a2a/: executor.py
src/agent_runner/registry/: firestore.py
tests/: conftest.py  test_config.py  test_entrypoint.py  test_server.py
